<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/et1"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/et2"
        android:inputType="number"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number1" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="65dp"
        android:text="@string/res"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/button_calcular"
        app:layout_constraintTop_toBottomOf="@+id/rg_calculadora" />

    <Button
        android:id="@+id/button_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="50dp"
        android:onClick="calcular"
        android:text="@string/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_calculadora" />

    <RadioGroup
        android:id="@+id/rg_calculadora"
        android:layout_width="300dp"
        android:layout_height="171dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number2">

        <RadioButton
            android:id="@+id/rb_sumar"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:text="@string/btn_sumar" />

        <RadioButton
            android:id="@+id/rb_restar"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:text="@string/btn_restar" />

        <RadioButton
            android:id="@+id/rb_multiplicar"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:text="@string/btn_multipliacar" />

        <RadioButton
            android:id="@+id/rb_dividir"
            android:layout_width="300dp"
            android:layout_height="43dp"
            android:text="@string/btn_dividir" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>